@@ -10,12 +10,10 @@ import com.gepardec.mega.domain.model.monthlyreport.WorkingLocation;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 class InsufficientRestTimeCalculatorTest {
 
@@ -23,7 +21,7 @@ class InsufficientRestTimeCalculatorTest {
 
     @Test
     void calculate_whenDataListEmpty_thenNoWarningsCreated() {
-        assertTrue(calculator.calculate(List.of()).isEmpty());
+        assertThat(calculator.calculate(Collections.emptyList())).isEmpty();
     }
 
     private ProjectTimeEntry projectTimeEntryFor(int day, int startHour, int startMinute, int endHour, int endMinute) {
@@ -52,7 +50,7 @@ class InsufficientRestTimeCalculatorTest {
 
     @Test
     void whenDataListEmpty_thenNoWarningsCreated() {
-        assertTrue(calculator.calculate(List.of()).isEmpty());
+        assertThat(calculator.calculate(Collections.emptyList())).isEmpty();
     }
 
     @Test
@@ -62,12 +60,12 @@ class InsufficientRestTimeCalculatorTest {
 
         List<TimeWarning> warnings = calculator.calculate(List.of(timeEntryOne, timeEntryTwo));
 
-        assertEquals(1, warnings.size());
+        assertThat(warnings).hasSize(1);
         TimeWarning warning = warnings.get(0);
-        assertNotNull(warning.getDate());
-        assertNotNull(warning.getMissingRestTime());
-        assertNull(warning.getExcessWorkTime());
-        assertNull(warning.getMissingBreakTime());
+        assertThat(warning.getDate()).isNotNull();
+        assertThat(warning.getMissingRestTime()).isNotNull();
+        assertThat(warning.getExcessWorkTime()).isNull();
+        assertThat(warning.getMissingBreakTime()).isNull();
     }
 
     @Test
@@ -77,8 +75,8 @@ class InsufficientRestTimeCalculatorTest {
 
         List<TimeWarning> warnings = calculator.calculate(List.of(timeEntryTwo, timeEntryOne));
 
-        assertEquals(1, warnings.size());
-        assertEquals(1, warnings.get(0).getMissingRestTime());
+        assertThat(warnings).hasSize(1);
+        assertThat(warnings.get(0).getMissingRestTime()).isEqualTo(1);
     }
 
     @Test
@@ -88,8 +86,8 @@ class InsufficientRestTimeCalculatorTest {
 
         List<TimeWarning> warnings = calculator.calculate(List.of(timeEntryOne, timeEntryTwo));
 
-        assertEquals(1, warnings.size());
-        assertEquals(1, warnings.get(0).getMissingRestTime());
+        assertThat(warnings).hasSize(1);
+        assertThat(warnings.get(0).getMissingRestTime()).isEqualTo(1);
     }
 
     @Test
@@ -100,8 +98,8 @@ class InsufficientRestTimeCalculatorTest {
 
         List<TimeWarning> warnings = calculator.calculate(List.of(timeEntryOne, timeEntryTwo, timeEntryThree));
 
-        assertEquals(1, warnings.size());
-        assertEquals(1, warnings.get(0).getMissingRestTime());
+        assertThat(warnings).hasSize(1);
+        assertThat(warnings.get(0).getMissingRestTime()).isEqualTo(1);
     }
 
     @Test
@@ -112,8 +110,8 @@ class InsufficientRestTimeCalculatorTest {
 
         List<TimeWarning> warnings = calculator.calculate(List.of(timeEntryOne, timeEntryTwo, timeEntryThree));
 
-        assertEquals(1, warnings.size());
-        assertEquals(1, warnings.get(0).getMissingRestTime());
+        assertThat(warnings).hasSize(1);
+        assertThat(warnings.get(0).getMissingRestTime()).isEqualTo(1);
     }
 
     @Test
@@ -121,10 +119,9 @@ class InsufficientRestTimeCalculatorTest {
         ProjectTimeEntry timeEntryOne = projectTimeEntryFor(1, 16, 0, 22, 0);
         JourneyTimeEntry timeEntryTwo = journeyTimeEntryFor(2, 8, 0, 2, 9, 0, Vehicle.CAR_ACTIVE);
 
-
         List<TimeWarning> warnings = calculator.calculate(List.of(timeEntryOne, timeEntryTwo));
 
-        assertEquals(0, warnings.size());
+        assertThat(warnings).isEmpty();
     }
 
     @Test
@@ -134,7 +131,7 @@ class InsufficientRestTimeCalculatorTest {
 
         List<TimeWarning> warnings = calculator.calculate(List.of(timeEntryOne, timeEntryTwo));
 
-        assertTrue(warnings.isEmpty());
+        assertThat(warnings).isEmpty();
     }
 
     @Test
@@ -145,6 +142,6 @@ class InsufficientRestTimeCalculatorTest {
 
         List<TimeWarning> warnings = calculator.calculate(List.of(timeEntryOne, timeEntryTwo, timeEntryThree));
 
-        assertTrue(warnings.isEmpty());
+        assertThat(warnings).isEmpty();
     }
 }
